--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,3 @@
-baseURL = 'https://SamBlog.github.io'
+baseURL = 'https://sgravesopen.github.io/HugoBlog/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
